# corrupted-text

./: .docstr.yaml  .gitignore  CITATION.cff  README.md  imdb_example.ipynb  pyproject.toml  setup.py
.github/workflows/: test.yml  test_imdb.yml
corrupted_text/: __init__.py  text_corruptor.py
foo/: text_corruptor.py
tests/: accuracy_measurement.py  dummy_dataset.py  test_create_imdb_dataset.py  test_text_corruptor.py
tests/measurement_model/: keras_metadata.pb  saved_model.pb
tests/measurement_model/variables/: variables.data-00000-of-00001  variables.index
