[tool.poetry]
name = "corrupted-text"
version = "0.0.1"
description = "Test input prioritizers implemented as part of our ISSTA 2022 paper 'Simple Techniques Work Surprisingly Well for Neural Network Test Prioritization and Active Learning '"
authors = ["Michael Weiss <michael.weiss@usi.ch>"]

[tool.poetry.dependencies]
python = "^3.6.2"
polyleven = "0.7" # Fast levenshtein distance implementation
numpy = "^1.16.4"
datasets = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.4"
tox = "^3.24.4"
tox-pyenv = "^1.1.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
